--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,5 @@
 .btn-round{
-background-image: linear-gradient(111.5deg, #1464c4 0.4%, #2198d6 100.2%);
+background: #EA4242;
   padding: 14px 21px;
   border-radius: 50%;
   font-weight: bold;
@@ -20,7 +20,7 @@ background-image: linear-gradient(111.5deg, #1464c4 0.4%, #2198d6 100.2%);
 }
 
 .btn-participer{
-  background: $blue;
+ background: #EA4242;
   border-radius: 5px;
   font-size: 13px;
   padding: 1.3vh;
@@ -73,7 +73,7 @@ background-image: linear-gradient(111.5deg, #1464c4 0.4%, #2198d6 100.2%);
 .btn-chatroom{
   color:black;
   font-weight: bold;
-  background: white;
+ background: #EA4242;
   opacity:0.7;
   font-size: 13px;
   padding: 1.5vh;
