--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -17,8 +17,8 @@
   <div class="disc animated fadeIn mr-2" id="discover-container">
    <div class="discover-top">
      <div class="home-title">
-       <p class="mb-0"><%="#{@user.hospital.events.count} événements"%></p>
-       <h1 class="mb-2"><%="#{@user.hospital.name}" %></h2>
+       <p class="mb-0"><%="#{@user.hospital.name}" %></p>
+       <h1 class="mb-2"><%="#{@user.hospital.events.count} événements"%></h2>
      </div>
    </div>
 
