--- a/app/views/shared/_events_modal.html.erb
+++ b/app/views/shared/_events_modal.html.erb
@@ -15,7 +15,7 @@
               </div>
               <div class="time text-center">
                 <p><img src="https://img.icons8.com/dotty/80/000000/calendar-2.png" height="25px", width="25px"></p>
-                <p><%= event.start.hour %>h<%= event.start.min %> - <%= event.end.hour %>h<%= event.end.min %></p>
+                <p><%= @event.start.strftime("%H:%M") %> - <%= @event.end.strftime("%H:%M") %></p>
               </div>
             </div>
 
