--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
-    <%= favicon_link_tag 'apple-icon-120x120.png'%>
+    <%= favicon_link_tag 'icons/apple-icon-120x120.png'%>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable"  content="yes">
     <meta name="msapplication-TileColor" content="#ffffff">
