--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
 @import "card-event";
 @import "simple-form";
 @import "message";
@@ -10,7 +9,7 @@
 @import "tab";
 @import "button";
 @import "signin-form";
-@import "notification_dropdown";
+@import "notification";
 @import "chatroom-card";
 @import "modal_show_event";
-
+@import "top_bar";
