--- a/app/assets/stylesheets/components/_create-form.scss
+++ b/app/assets/stylesheets/components/_create-form.scss
@@ -27,4 +27,17 @@
 
 .horaires {
   width: 100%;
+  justify-content: space-evenly;
 }
+
+// input::placeholder {
+//   color: rgb(222, 226, 230) !important;
+//   font-size: 20px;
+// }
+
+// .starticker::placeholder{
+//     color: red !important;
+// }
+
+
+
