--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -50,7 +50,7 @@ input.form-control {
   font-size: 16px;
   &:focus {
     outline: none;
-    border-bottom: 2px solid blue;
+    border-bottom: 2px solid #EA4242;
     box-shadow: none;
   }
 }
