--- a/app/assets/stylesheets/components/_simple-form.scss
+++ b/app/assets/stylesheets/components/_simple-form.scss
@@ -3,7 +3,9 @@
     color: #838284;
 
   }
-
+.time::placeholder {
+  color: red !important;
+}
 .simple_form {
 
   margin-top: 1em;
@@ -68,6 +70,9 @@ div.boolean label {
   text-align: center;
 }
 
+.third-block p {
+  font-size: 20px;
+}
 
 .actions {
   vertical-align: middle;
