--- a/app/views/shared/_modal_show_event.html.erb
+++ b/app/views/shared/_modal_show_event.html.erb
@@ -7,7 +7,12 @@
   <div class="container">
     <div class="d-flex tete-single-event">
       <h1> <%= event.name %> </h1>
-      <p id="date-event-show"> <%= @event.start.day %>/<%= @event.start.month %></p>
+      <p id="date-event-show">
+        <% if @event.date == nil %>
+          <p class="date-event-show"><%= Date.today.strftime("%d %b %Y") %></p>
+        <% else %>
+          <p class="date-event-show"> <%= @event.date.day %>/<%= @event.date.month %></p>
+        <% end %></p>
       <% if current_user == event.user %>
         <div class="update-event">
            <%= link_to edit_event_path(event) do %>
