--- a/app/views/shared/_notification.html.erb
+++ b/app/views/shared/_notification.html.erb
@@ -9,7 +9,7 @@
     <% end %>
     </div>
     <div class="notification-content">
-      <p><strong> <%= notification.name %> </strong> a été créé par <strong> <%= notification.user.username %> </strong>.</p>
+      <p> <span> <%= notification.name %></span> a été créé par <span> <%= notification.user.username %></span>.</p>
       <p><small><%= ((Time.now - notification.created_at) / 60).to_i %> minutes ago</small></p>
     </div>
   </div>
@@ -25,7 +25,7 @@
         <% end %>
       </div>
       <div class="notification-content">
-        <p><strong> <%= notification.user.username %> </strong> a rejoint votre événement <strong> <%= notification.event.name %>.</strong></p>
+        <p> <span> <%= notification.user.username %></span> a rejoint votre événement <span> <%= notification.event.name %></span>.</p>
         <p><small><%= ((Time.now - notification.created_at) / 60).to_i %> minutes ago</small></p>
       </div>
     </div>
