--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -6,8 +6,7 @@
   border: 1px solid rgb(235,235,235);
 
   p{
-
-    strong{
+    span{
       color: #EA4242;
     }
   }
@@ -34,7 +33,7 @@
 
 .dropdown-item {
   font-size:14px;
-  color:#1D88D1;
+  color:#EA4242;
   font-weight:bold;
 }
 
@@ -138,13 +137,25 @@
   opacity:0.3!important
 }
 
+.body-grise .card-agenda {
+  opacity:0.3!important
+}
+
 .animation.helping.show {
     width: 1px;
 }
 
 .notification .notification-content p {
-  font-size:15px;
+  font-size:13px;
   &:hover{
     text-decoration: none;
   }
 }
+
+.see-more{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
+
