--- a/app/assets/stylesheets/components/_create-form.scss
+++ b/app/assets/stylesheets/components/_create-form.scss
@@ -35,9 +35,14 @@
 //   font-size: 20px;
 // }
 
-// .starticker::placeholder{
-//     color: red !important;
-// }
+#event_name::placeholder{
+    color: #bdbdbd;
+}
+
+#event_location::placeholder{
+    color: #bdbdbd;
+}
+
 
 
 
