--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -9,7 +9,7 @@
      <% if @event.date == nil %>
       <p class="date-event-show"><%= Date.today.strftime("%d %b %Y") %></p>
      <% else %>
-       <p class="date-event-show"> <%= @event.date.day %>/<%= @event.date.month %></p>
+       <p class="date-event-show"> <%= @event.date.strftime("%d %b %Y") %></p>
       <% end %>
       <% if current_user == event.user %>
         <div class="update-event">
