--- a/app/views/shared/_modal_show_event.html.erb
+++ b/app/views/shared/_modal_show_event.html.erb
@@ -31,16 +31,16 @@
       <div class="d-flex justify-content-between">
         <%= render 'shared/chat_btn'  %>
       </div>
-    <% elsif Reservation.where(user: current_user, event: event).exists? %>
+    <% elsif Reservation.where(user: current_user, event: event).first.exists? %>
     <%= render 'shared/participe_call_to_action', reservation: Reservation.where(user: current_user, event: event).first %>
     <% else %>
     <div class="participe d-none">
-      <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
+      <%= link_to "Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
 
      </div>
     <div class="participe-pas">
       <% if event.reservations.count < event.max_participants %>
-        <%= link_to " Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
+        <%= link_to "Participer", event_reservations_path(@event), method: :post, remote: true, class: "btn-participer d-block"%>
       <% else %>
         <p class="btn-complete d-block">Complet</p>
       <% end %>
