--- a/app/assets/stylesheets/components/_notification.scss
+++ b/app/assets/stylesheets/components/_notification.scss
@@ -38,15 +38,14 @@
 }
 
 .notification.seen{
-  background: $light-gray;
+  background: black;
+  opacity:0.5;
 
 }
 
 .notification.unseen{
-  background: black;
-  opacity:0.5;
   border-left : 0.5rem solid;
-  border-color: #1D88D1;
+  border-color: #EA4242;
   background: white;
 }
 
@@ -123,7 +122,7 @@
   border-radius: 10px;
   background: white;
   border: 1px solid rgba(0,0,0,0.1);
-  z-index: -1;
+  // z-index: -1;
   transform: rotateZ(45deg);
 }
 
