--- a/app/views/reservations/create.js.erb
+++ b/app/views/reservations/create.js.erb
@@ -1,12 +1,11 @@
-console.log("hey");
 
- 
+
+
 const joinEvent = () => {
   const participe = document.querySelector("#event-show-<%=@event.id%> .participe");
   const participePas = document.querySelector("#event-show-<%=@event.id%> .participe-pas");
- 
-  participe.classList.remove("d-none");
-  participePas.classList.add("d-none");
+  participePas.classList.toggle("d-none");
+  participe.classList.toggle("d-none");
 }
 
 
