--- a/app/views/shared/_participe_call_to_action.html.erb
+++ b/app/views/shared/_participe_call_to_action.html.erb
@@ -1,9 +1,9 @@
 <div class="d-flex justify-content-between">
-  <%= link_to reservation_path(reservation), method: :delete, remote: true do%>
+  <%#= link_to reservation_path(reservation), method: :delete, remote: true do%>
     <div class="btn-desinscrire">
       <i class="fas fa-check"></i><%= " Participe" %>
     </div>
-  <% end %>
+  <%# end %>
   <%= render 'shared/chat_btn'  %>
 </div>
 
