--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -25,8 +25,8 @@
    <div class="d-flex cards-disc">
        <% events = @user.hospital.events.sort_by {|event| event.date} %>
        <% events.each do |event| %>
-         <% unless event.date.nil? %>
-           <%= (render 'shared/card_new_event', event: event) if event.date > DateTime.now %>
+         <% unless event.date.nil?%>
+           <%= (render 'shared/card_new_event', event: event) if (event.date > DateTime.now && event.user != current_user) %>
          <% end %>
        <% end %>
    </div>
