--- a/app/assets/stylesheets/components/_modal_show_event.scss
+++ b/app/assets/stylesheets/components/_modal_show_event.scss
@@ -30,8 +30,22 @@
   font-weight: bold;
   font-size: 3em;
   position: absolute;
-  right: 0.8em;
-  top: 0.5em;
+  right: 0.3em;
+  top: 0.1em;
   color: white !important;
   opacity: 10 !important;
+}
+#date-event-show-modal {
+  margin-top: 1em;
+  margin-left: 1em;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  h2 {
+    color: white;
+  }
+}
+
+.banner-modal .modal-header {
+  border-bottom: none;
 }
