--- a/app/views/shared/_participe_call_to_action.html.erb
+++ b/app/views/shared/_participe_call_to_action.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between">
+<div class="d-flex justify-content-between align-items-center">
   <%#= link_to reservation_path(reservation), method: :delete, remote: true do%>
     <div class="btn-desinscrire">
       <i class="fas fa-check"></i><%= " Participe" %>
