--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,7 @@
 $red: #FD1015;
 $blue: #0042DA;
 $yellow: #FFC65A;
-$orange: #E67E22;
+$orange: #EA4242;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: white;
@@ -14,3 +14,4 @@ $my-red:#ff5252;
 $my-grey:#FCFAF9;
 
 $coral: #E57067;
+$super-gray: #3F3F3F;
