--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,7 +4,7 @@
        <h2 class="tab-underlined active découvrire">Découvrir</h2>
      </li>
      <li>
-       <h2 class="tab-underlined participe">Agenda</h2>
+       <h2 class="tab-underlined participe">Mon Agenda</h2>
      </li>
      <li>
        <h2 class="tab-underlined organise">Messages</h2>
