--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -22,7 +22,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Créer un événement", new_event_path, class: "dropdown-item" %>
             <%= link_to "Mon Profil", dashboard_path, class: "dropdown-item" %>
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       </div>
