--- a/app/assets/stylesheets/components/_card-event.scss
+++ b/app/assets/stylesheets/components/_card-event.scss
@@ -174,6 +174,11 @@
   padding-top: 30px;
 }
 
+#number-of-participants-a {
+  padding-left: 20px;
+  padding-top: 30px;
+}
+
 .flex-between {
   display: flex;
   justify-content: left;
