--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,7 +8,7 @@
 @import "create-form";
 @import "tab";
 @import "button";
-@import "signin-form";
+@import "form_login";
 @import "notification";
 @import "chatroom-card";
 @import "modal_show_event";
