--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 .body-home {
   background-color: $coral;
-  height: 60vh;
+  height: 40vh;
   text-align: center;
 }
 
@@ -30,7 +30,7 @@
 }
 
 #text-home-2 {
-  font-size: 28px;
+  font-size: 15px;
   color: white;
   text-align: center;
   vertical-align: middle;
@@ -40,7 +40,7 @@
 .slogan-text {
   display: flex;
   align-items: center;
-
+  font-size:20px;
 }
 
 .search-field {
@@ -50,8 +50,8 @@
 
 .top-home {
   width: 100%;
-  height: 10vh;
-  background-color: white;
+  height: 5vh;
+  background-color: $coral;
   display: flex;
   justify-content: space-between;
   padding-left: 3em;
@@ -59,7 +59,27 @@
   vertical-align: middle;
 }
 
+.top-home {
+  h2{
+    margin-top:1em;
+  }
+}
+
 #logo-hplace {
   height: 30px;
   width: 30px;
+}
+
+.btn-signin {
+  color:white;
+  font-weight: bold;
+  // background: white;
+  // opacity:0.7;
+  // font-size: 16px;
+  // padding: 1.5vh;
+  // border-radius: 5px;
+  // max-height: 7vh;
+  // text-decoration: none;
+  // vertical-align: middle;
+  margin-top: 1em;
 }
