--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,42 @@
 <div class="body-home">
-
   <div class="text-home">
-
     <div class="slogan">
-    <!--   <div class="first-home">
-        <div class="slogan-text">
-            <div id="typed-strings">
-              <h1><strong>Happy</strong></h1>
-              <h1><strong>Humain</strong></h1>
-              <h1><strong>Hôpital</strong></h1>
-              <h1><strong>Hhhhhh</strong></h1>
-              <h1><strong>Humain</strong></h1>
-              <h1><strong>Hôpital</strong></h1>
-            </div>
-            <span id="typed"></span>
-            <span><strong>...place</strong></span>
-        </div>
-      </div> -->
 
-    <% unless user_signed_in? %>
-      <div class="top-home sign-in-home">
-        <%= image_tag("icons/hplace-logo.png", size:"70") %>
-        <h2 id="btn-signin"><%=link_to "Sign in", new_user_session_path%></h2>
+    <div class="first-home">
+      <div class="slogan-text">
+          <div id="typed-strings">
+            <h1><strong>Happy</strong></h1>
+            <h1><strong>Humain</strong></h1>
+            <h1><strong>Hôpital</strong></h1>
+            <h1><strong>Hhhhhh</strong></h1>
+            <h1><strong>Humain</strong></h1>
+            <h1><strong>Hôpital</strong></h1>
+            <h1><strong>Happy</strong></h1>
+            <h1><strong>Humain</strong></h1>
+            <h1><strong>Hôpital</strong></h1>
+            <h1><strong>Hhhhhh</strong></h1>
+            <h1><strong>Humain</strong></h1>
+          </div>
+          <span id="typed"></span>
+          <span><strong>...place</strong></span>
       </div>
-    <% end %>
+    </div>
 
     </div>
     <div class="container", style="height:30vh", width="50vh">
     <p style="padding: 3em;"><em id="text-home-2">Ne faîtes plus hôpital à part, participez à des événements entre patients</em></p>
-    </div>
-  </div>
 
-  <div class="search-bar-homepage">
-    <%= form_tag handler_path, method: :get do %>
-      <div class="d-flex home-search">
-        <%= text_field_tag :query, params[:query], class: "form-control search-field", placeholder: "Sélectionner un hôpital"%>
-        <button name="button" type="submit" class="icone-loupe">
-          <i class="fas fa-search"></i>
-        </button>
-      </div>
-    <% end %>
+<!--       <div class="search-bar-homepage">
+        <%#= form_tag handler_path, method: :get do %>
+          <div class="d-flex home-search">
+            <%#= text_field_tag :query, params[:query], class: "form-control search-field", placeholder: "Sélectionner un hôpital"%>
+            <button name="button" type="submit" class="icone-loupe">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        <%# end %>
+      </div> -->
+    </div>
   </div>
 
 </div>
