--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,13 +1,29 @@
-
 <div class="container-topbar">
   <%#= link_to image_tag("arrow-left.png"), :back, id:"arrow-picto" %>
   <div class="d-flex align-items-center">
-      <div id="logo">
+    <div id="logo">
+        <% unless user_signed_in? %>
+          <%= link_to root_path() do  %>
+            <%= image_tag "ballon.png", height: 55 %>
+          <% end %>
+        <% else %>
           <%= link_to dashboard_path() do  %>
-          <%= image_tag "ballon.png", height: 55 %>
+            <%= image_tag "ballon.png", height: 55 %>
+          <% end %>
         <% end %>
-      </div>
+    </div>
     <div class= "links-dash d-flex justify-content-between" style = "width:3em">
+      <% unless user_signed_in? %>
+        <div>
+          <li class="nav-item dropdown">
+            <i class="fas fa-bars" class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" /></i>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <%=link_to "S'identifier", new_user_session_path, class: "dropdown-item"%>
+              <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %>
+            </div>
+          </li>
+        </div>
+      <% else %>
       <div class="button_badge ">
         <!-- <div class= ""> -->
           <p class="number-of-notif"></p>
@@ -26,6 +42,7 @@
           </div>
         </li>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
